--- a/day11/list-comprehensions.ipynb
+++ b/day11/list-comprehensions.ipynb
@@ -261,6 +261,48 @@
     "p = itertools.product(xcoor, ycoor)\n",
     "print(list(p))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Fundamentals\n",
+    "\n",
+    "if/else statements in list comprehensions involve two things:\n",
+    "\n",
+    "- List comprehensions\n",
+    "- Conditional expressions (Ternary operators)\n",
+    "\n",
+    "### 1. List comprehensions\n",
+    "\n",
+    "Based on https://docs.python.org/3/tutorial/datastructures.html#list-comprehensions - Its structure consists of: \"brackets containing an expression followed by a for clause, then zero or more for or if clauses\".\n",
+    "\n",
+    "## Case 1\n",
+    "\n",
+    "Here we have no condition. Each item from the iterable is added to `new_list`.\n",
+    "\n",
+    "```\n",
+    "new_list = [expression for item in iterable]\n",
+    "new_list = [x for x in range(1, 10)]\n",
+    "> [1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+    "\n",
+    "```\n",
+    "\n",
+    "## Case 2\n",
+    "\n",
+    "Here we have one condition.\n",
+    "\n",
+    "### Example 1\n",
+    "\n",
+    "Condition: only *even* numbers will be added to `new_list`.\n",
+    "\n",
+    "```\n",
+    "new_list = [expression for item in iterable if condition == True]\n",
+    "new_list = [x for x in range(1, 10) if x % 2 == 0]\n",
+    "> [2, 4, 6, 8]\n",
+    "\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
